# StoragePilot

./: .gitignore  MANIFEST.in  Makefile  README.md  main.py  mcp_config.json  mcp_server.py  pyproject.toml  quick_scan.py  requirements.txt  setup.ps1  setup.py  setup.sh
.github/workflows/: publish.yml
agents/: __init__.py  crew_agents.py  tasks.py
api/: __init__.py  copilot.py
config/: config.yaml
scripts/: forge_publish_storagepilot.py  forge_register_storagepilot.py  forge_register_storagepilot.sh  setup_ollama.sh  setup_wizard.py  storagepilot_mcp_wrapper.sh  test_mcp_tools.sh
storagepilot/: __init__.py  cli.py  core.py
tests/: __init__.py  test_dashboard_api.py
tools/: __init__.py  classifier.py  matrixllm.py  path_resolver.py  terminal.py
ui/: dashboard.py
ui/static/: index.html
