[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storagepilot"
version = "0.1.0"
description = "AI-Powered Storage Lifecycle Manager - Multi-agent system for intelligent storage analysis and optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ruslanmv", email = "ruslanmv@example.com"}
]
keywords = [
    "storage",
    "ai",
    "automation",
    "file-management",
    "crewai",
    "llm",
    "ollama"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "crewai>=0.28.0",
    "crewai-tools>=0.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
    "altair>=5.2.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "python-magic>=0.4.27",
    "filetype>=1.2.0",
    "xxhash>=3.4.1",
    "humanize>=4.9.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "psutil>=5.9.8",
    "watchdog>=4.0.0",
    "aiofiles>=23.2.1",
    "anyio>=4.0.0",
    "platformdirs>=3.5.1",
    "requests>=2.31.0",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
storagepilot = "storagepilot.cli:main"

[project.urls]
Homepage = "https://github.com/ruslanmv/StoragePilot"
Documentation = "https://github.com/ruslanmv/StoragePilot#readme"
Repository = "https://github.com/ruslanmv/StoragePilot.git"
Issues = "https://github.com/ruslanmv/StoragePilot/issues"

[tool.setuptools]
packages = ["storagepilot", "agents", "tools", "ui"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["config/*.yaml", "assets/*", "scripts/*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
